Fixed general spacing issues created by new Spanish translations (#247)
This PR makes various styling tweaks to WOW to accommodate our new Spanish translations, which are generally much longer strings of text than their English counterparts.

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -66,7 +66,7 @@
       margin-bottom: 0;
       color: $dark;
       font-weight: bold;
-      font-size: 2rem;
+      font-size: 1.8rem;
 
       @include for-tablet-portrait-up() {
         font-size: 2.4rem;
