--- a/client/src/styles/PropertiesMap.scss
+++ b/client/src/styles/PropertiesMap.scss
@@ -69,6 +69,7 @@
     border-top: 1px solid #000;
     padding: 5px;
     padding-top: 0;
+    font-size: 13px;
 
     p {
       font-size: 1.5rem;
